CFLAGS=-g -m64 -Wall -W -Wno-unused-parameter -Wno-unused-function -Wunused-value -I/usr/include 
CPPFLAGS=-g -m64 -Wall -W -Wno-unused-parameter -Wno-unused-function -Wunused-value -I/usr/include 
LDFLAGS=-L/usr/lib64 -lSDL -lGLU -lGL

bin_PROGRAMS=voronoi
voronoi_SOURCES=Capp.cpp Capp_OnCleanup.cpp Capp_OnEvent.cpp Capp_OnInit.cpp Capp_OnLoop.cpp Capp_OnRender.cpp CLine.cpp CPoly.cpp CVert.cpp CVoronoi.cpp CVoronoi_Generate.cpp main.cpp
